--- a/une-cinema-typescript/index.html
+++ b/une-cinema-typescript/index.html
@@ -8,5 +8,77 @@
     <script src="app.js"></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">UNE Cinema</header>
+    <main class="main">
+      <div id="movies" class="movies">
+        <div id="1" class="movie selected">
+          <img
+            class="poster"
+            src="https://cdn.eventcinemas.com.au/cdn/resources/movies/15020/images/largeposter.jpg"
+          />
+          <div class="title">Jurassic World Dominion</div>
+        </div>
+        <div id="2" class="movie">
+          <img
+            class="poster"
+            src="https://cdn.eventcinemas.com.au/cdn/resources/movies/14621/images/largeposter.jpg"
+          />
+          <div class="title">Top Gun: Maverick</div>
+        </div>
+        <div id="3" class="movie">
+          <img
+            class="poster"
+            src="https://cdn.eventcinemas.com.au/cdn/resources/movies/15657/images/largeposter.jpg"
+          />
+          <div class="title">Doctor Strange in the Multiverse of Madness</div>
+        </div>
+      </div>
+      <div class="theater">
+        <div class="screen"></div>
+        <div class="seat-map">
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
