Add api server for movies and the Cinema class

--- a/une-cinema-typescript/index.html
+++ b/une-cinema-typescript/index.html
@@ -10,33 +10,6 @@
   </head>
   <body>
     <header class="header">UNE Cinema</header>
-    <main class="main">
-      <div id="movies" class="movies">
-        <div id="1" class="movie selected">
-          <img
-            class="poster"
-            src="https://cdn.eventcinemas.com.au/cdn/resources/movies/15020/images/largeposter.jpg"
-          />
-          <div class="title">Jurassic World Dominion</div>
-        </div>
-        <div id="2" class="movie">
-          <img
-            class="poster"
-            src="https://cdn.eventcinemas.com.au/cdn/resources/movies/14621/images/largeposter.jpg"
-          />
-          <div class="title">Top Gun: Maverick</div>
-        </div>
-        <div id="3" class="movie">
-          <img
-            class="poster"
-            src="https://cdn.eventcinemas.com.au/cdn/resources/movies/15657/images/largeposter.jpg"
-          />
-          <div class="title">Doctor Strange in the Multiverse of Madness</div>
-        </div>
-      </div>
-      <div class="theater" id="theater">
-        <div class="screen"></div>
-      </div>
-    </main>
+    <main class="main" id="cinema"></main>
   </body>
 </html>
