--- a/une-cinema-typescript/index.html
+++ b/une-cinema-typescript/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNE Cinema</title>
-    <script src="./dist/app.js" defer></script>
+    <script type="module" src="app.ts" defer></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
